--- a/product.html
+++ b/product.html
@@ -1,4 +1,4 @@
-<html lang="az">
+<html lang="az" class="overflow-x-hidden">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -155,25 +155,25 @@
             <div class="flex flex-wrap items-center">
                 <form action="" class="m-0">
                     <div class="flex flex-wrap items-center mb-5">
-                        <div class="mb-3">
+                        <div class="w-full md:w-auto mb-3">
                             <label for="category">
-                                <select name="category" id="category" class="form_select">
+                                <select name="category" id="category" class="w-full md:w-auto form_select">
                                     <option value="all">Kateqoriya</option>
                                     <option value="1">Kateqoriya 1</option>
                                     <option value="2">Kateqoriya 2</option>
                                 </select>
                             </label>
                         </div>
-                        <div class="mb-3">
+                        <div class="w-full md:w-auto mb-3">
                             <label for="popularity">
-                                <select name="popularity" id="popularity" class="form_select">
+                                <select name="popularity" id="popularity" class="w-full md:w-auto form_select">
                                     <option value="all">Populyarlığına görə</option>
                                 </select>
                             </label>
                         </div>
-                        <div class="mb-3">
+                        <div class="w-full md:w-auto mb-3">
                             <label for="new">
-                                <select name="new" id="new" class="form_select">
+                                <select name="new" id="new" class="w-full md:w-auto form_select">
                                     <option value="new">Yeni kolleksiya</option>
                                 </select>
                             </label>
@@ -189,19 +189,19 @@
                                 <li class="glide__slide px-2">
                                     <div class="relative h-[330px]">
                                         <span class="p_badge">Yeni</span>
-                                        <img src="./assets/images/products/product.png" class="w-full h-full" alt="">
+                                        <img src="./assets/images/products/product.png" class="w-full h-full object-contain" alt="">
                                     </div>
                                 </li>
                                 <li class="glide__slide px-2">
                                     <div class="relative h-[330px]">
                                         <span class="p_badge">Yeni</span>
-                                        <img src="./assets/images/products/product_1.png" class="w-full h-full" alt="">
+                                        <img src="./assets/images/products/product_1.png" class="w-full h-full object-contain" alt="">
                                     </div>
                                 </li>
                                 <li class="glide__slide px-2">
                                     <div class="relative h-[330px]">
                                         <span class="p_badge">Yeni</span>
-                                        <img src="./assets/images/products/product_2.png" class="w-full h-full" alt="">
+                                        <img src="./assets/images/products/product_2.png" class="w-full h-full object-contain" alt="">
                                     </div>
                                 </li>
                             </ul>
