--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<html lang="az">
+<html lang="az" class="overflow-x-hidden">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
