--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
     <nav>
         <div class="container">
-            <div class="flex items center justify-between py-3">
+            <div class="flex items-center justify-between py-3">
                 <a href="./index.html">
                     <img src="./assets/images/logo.png" class="max-w-[70px]" alt="Azsafety">
                 </a>
@@ -97,23 +97,23 @@
                             Əlaqə
                         </a>
                     </li>
-                    <li class="relative" x-data="{ open: false }">
+                    <li class="hidden lg:block relative" x-data="{ open: false }">
                         <button class="flex items-center" @click="open = !open">
                             <span>Az</span>
                             <span class="mdi mdi-chevron-down text-xl"></span>
                         </button>
                         <ul class="lang_items" x-show="open" x-transition.opacity x-transition.duration.500ms>
-                            <li class="pt-3 hover:bg-[#FFB805]">
+                            <li class="p-3 hover:bg-[#FFB805] hover:text-white">
                                 <a href="#" class="block w-full">
                                     Az
                                 </a>
                             </li>
-                            <li class="pt-3 hover:bg-[#FFB805]">
+                            <li class="p-3 hover:bg-[#FFB805] hover:text-white">
                                 <a href="#" class="block w-full">
                                     En
                                 </a>
                             </li>
-                            <li class="pt-3 hover:bg-[#FFB805]">
+                            <li class="p-3 hover:bg-[#FFB805] hover:text-white">
                                 <a href="#" class="block w-full">
                                     Ru
                                 </a>
@@ -121,9 +121,34 @@
                         </ul>
                     </li>
                 </ul>
-                <button class="block lg:hidden text-3xl" @click="nav = !nav">
-                    <span class="mdi" x-bind:class="nav ? 'mdi-close' : 'mdi-menu'"></span>
-                </button>
+                <div class="flex items-center gap-4 lg:hidden">
+                    <div class="relative" x-data="{ open: false }">
+                        <button class="flex items-center" @click="open = !open">
+                            <span>Az</span>
+                            <span class="mdi mdi-chevron-down text-xl"></span>
+                        </button>
+                        <ul class="lang_items" x-show="open" x-transition.opacity x-transition.duration.500ms>
+                            <li class="p-3 hover:bg-[#FFB805] hover:text-white">
+                                <a href="#" class="block w-full">
+                                    Az
+                                </a>
+                            </li>
+                            <li class="p-3 hover:bg-[#FFB805] hover:text-white">
+                                <a href="#" class="block w-full">
+                                    En
+                                </a>
+                            </li>
+                            <li class="p-3 hover:bg-[#FFB805] hover:text-white">
+                                <a href="#" class="block w-full">
+                                    Ru
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <button class="block lg:hidden text-3xl" @click="nav = !nav">
+                        <span class="mdi" x-bind:class="nav ? 'mdi-close' : 'mdi-menu'"></span>
+                    </button>
+                </div>
             </div>
         </div>
     </nav>
