counters animation added

--- a/index.html
+++ b/index.html
@@ -212,17 +212,26 @@
                     <div class="relative bg_section">
                         <div class="overlay"></div>
                         <div class="relative z-10 container">
-                            <ul class="flex items-center justify-around">
+                            <ul class="counter_items">
                                 <li class="text-white">
-                                    <p class="text-2xl md:text-4xl lg:text-5xl font-medium">200+</p>
+                                    <p class="counter_item" data-client="200">
+                                        <span data-client="200">200</span>
+                                        <span>+</span>
+                                    </p>
                                     <p class="text-sm lg:text-xl">Məmnun müştəri</p>
                                 </li>
                                 <li class="text-white">
-                                    <p class="text-2xl md:text-4xl lg:text-5xl font-medium">50+</p>
+                                    <p class="counter_item">
+                                        <span data-equipment="50">50</span>
+                                        <span>+</span>
+                                    </p>
                                     <p class="text-sm lg:text-xl">Avadanlıq</p>
                                 </li>
                                 <li class="text-white">
-                                    <p class="text-2xl md:text-4xl lg:text-5xl font-medium">100%</p>
+                                    <p class="counter_item">
+                                        <span data-warranty="100">100</span>
+                                        <span>%</span>
+                                    </p>
                                     <p class="text-sm lg:text-xl">Zəmanət</p>
                                 </li>
                             </ul>
