certificates page completed

--- a/certificates.html
+++ b/certificates.html
@@ -12,6 +12,9 @@
     <!-- Glide js -->
     <link rel="stylesheet" href="./assets/plugins/glide/glide.core.min.css">
     <link rel="stylesheet" href="./assets/plugins/glide/glide.theme.min.css">
+    <!-- Fancybox -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
+    />
     <!-- Material design icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.4.47/css/materialdesignicons.min.css">
     <!-- Custom css -->
@@ -178,6 +181,171 @@
         </div>
     </div>
     <!-- Breadcrumb end -->
+    <section class="pb-8">
+        <div class="container">
+            <div class="row">
+                <div class="w-full md:w-1/2 lg:w-1/4 mb-5">
+                    <div class="certificate_card group">
+                        <div class="absolute bottom-0 left-0">
+                            <div class="button_groups">
+                                <a data-fancybox="gallery" href="./assets/images/certificates/certificate.png" class="btn_gray btn_show flex-0">
+                                    <span class="mdi mdi-eye-outline"></span>
+                                </a>
+                                <a href="./assets/images/certificates/certificate.png"
+                                   class="btn_gray flex-0"
+                                   download
+                                >
+                                    <span class="mdi mdi-tray-arrow-down"></span>
+                                </a>
+                            </div>
+                        </div>
+                        <img src="./assets/images/certificates/certificate.png" class="w-full h-full" alt=""/>
+                        <div style="display:none">
+                            <a data-fancybox="gallery" href="./assets/images/certificates/certificate_2.png">
+                                <img src="./assets/images/certificates/certificate_2.png" alt=""/>
+                            </a>
+                            <a data-fancybox="gallery" href="./assets/images/certificates/certificate_3.png">
+                                <img src="./assets/images/certificates/certificate_3.png" alt=""/>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="w-full md:w-1/2 lg:w-1/4 mb-5">
+                    <div class="certificate_card group">
+                        <div class="absolute bottom-0 left-0">
+                            <div class="button_groups">
+                                <a data-fancybox="gallery" href="./assets/images/certificates/certificate_2.png" class="btn_gray btn_show flex-0">
+                                    <span class="mdi mdi-eye-outline"></span>
+                                </a>
+                                <a href="./assets/images/certificates/certificate_2.png"
+                                   class="btn_gray flex-0"
+                                   download
+                                >
+                                    <span class="mdi mdi-tray-arrow-down"></span>
+                                </a>
+                            </div>
+                        </div>
+                        <img src="./assets/images/certificates/certificate_2.png" class="w-full h-full" alt=""/>
+                        <div style="display:none">
+                            <a data-fancybox="gallery" href="./assets/images/certificates/certificate.png">
+                                <img src="./assets/images/certificates/certificate.png" alt=""/>
+                            </a>
+                            <a data-fancybox="gallery" href="./assets/images/certificates/certificate_3.png">
+                                <img src="./assets/images/certificates/certificate_3.png" alt=""/>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-full md:w-1/2 lg:w-1/4 mb-5">
+                    <div class="certificate_card group">
+                        <div class="absolute bottom-0 left-0">
+                            <div class="button_groups">
+                                <a data-fancybox="gallery" href="./assets/images/certificates/certificate.png" class="btn_gray btn_show flex-0">
+                                    <span class="mdi mdi-eye-outline"></span>
+                                </a>
+                                <a href="./assets/images/certificates/certificate.png"
+                                   class="btn_gray flex-0"
+                                   download
+                                >
+                                    <span class="mdi mdi-tray-arrow-down"></span>
+                                </a>
+                            </div>
+                        </div>
+                        <img src="./assets/images/certificates/certificate.png" class="w-full h-full" alt=""/>
+                        <div style="display:none">
+                            <a data-fancybox="gallery" href="./assets/images/certificates/certificate_2.png">
+                                <img src="./assets/images/certificates/certificate_2.png" alt=""/>
+                            </a>
+                            <a data-fancybox="gallery" href="./assets/images/certificates/certificate_3.png">
+                                <img src="./assets/images/certificates/certificate_3.png" alt=""/>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="w-full md:w-1/2 lg:w-1/4 mb-5">
+                    <div class="certificate_card group">
+                        <div class="absolute bottom-0 left-0">
+                            <div class="button_groups">
+                                <a data-fancybox="gallery" href="./assets/images/certificates/certificate_2.png" class="btn_gray btn_show flex-0">
+                                    <span class="mdi mdi-eye-outline"></span>
+                                </a>
+                                <a href="./assets/images/certificates/certificate_2.png"
+                                   class="btn_gray flex-0"
+                                   download
+                                >
+                                    <span class="mdi mdi-tray-arrow-down"></span>
+                                </a>
+                            </div>
+                        </div>
+                        <img src="./assets/images/certificates/certificate_2.png" class="w-full h-full" alt=""/>
+                        <div style="display:none">
+                            <a data-fancybox="gallery" href="./assets/images/certificates/certificate.png">
+                                <img src="./assets/images/certificates/certificate.png" alt=""/>
+                            </a>
+                            <a data-fancybox="gallery" href="./assets/images/certificates/certificate_3.png">
+                                <img src="./assets/images/certificates/certificate_3.png" alt=""/>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-full md:w-1/2 lg:w-1/4 mb-5">
+                    <div class="certificate_card group">
+                        <div class="absolute bottom-0 left-0">
+                            <div class="button_groups">
+                                <a data-fancybox="gallery" href="./assets/images/certificates/certificate.png" class="btn_gray btn_show flex-0">
+                                    <span class="mdi mdi-eye-outline"></span>
+                                </a>
+                                <a href="./assets/images/certificates/certificate.png"
+                                   class="btn_gray flex-0"
+                                   download
+                                >
+                                    <span class="mdi mdi-tray-arrow-down"></span>
+                                </a>
+                            </div>
+                        </div>
+                        <img src="./assets/images/certificates/certificate.png" class="w-full h-full" alt=""/>
+                        <div style="display:none">
+                            <a data-fancybox="gallery" href="./assets/images/certificates/certificate_2.png">
+                                <img src="./assets/images/certificates/certificate_2.png" alt=""/>
+                            </a>
+                            <a data-fancybox="gallery" href="./assets/images/certificates/certificate_3.png">
+                                <img src="./assets/images/certificates/certificate_3.png" alt=""/>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="w-full md:w-1/2 lg:w-1/4 mb-5">
+                    <div class="certificate_card group">
+                        <div class="absolute bottom-0 left-0">
+                            <div class="button_groups">
+                                <a data-fancybox="gallery" href="./assets/images/certificates/certificate_2.png" class="btn_gray btn_show flex-0">
+                                    <span class="mdi mdi-eye-outline"></span>
+                                </a>
+                                <a href="./assets/images/certificates/certificate_2.png"
+                                   class="btn_gray flex-0"
+                                   download
+                                >
+                                    <span class="mdi mdi-tray-arrow-down"></span>
+                                </a>
+                            </div>
+                        </div>
+                        <img src="./assets/images/certificates/certificate_2.png" class="w-full h-full" alt=""/>
+                        <div style="display:none">
+                            <a data-fancybox="gallery" href="./assets/images/certificates/certificate.png">
+                                <img src="./assets/images/certificates/certificate.png" alt=""/>
+                            </a>
+                            <a data-fancybox="gallery" href="./assets/images/certificates/certificate_3.png">
+                                <img src="./assets/images/certificates/certificate_3.png" alt=""/>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 <!-- Footer start -->
 <footer>
@@ -288,6 +456,8 @@
 
 <!--Alpine js-->
 <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+<!-- Fancybox -->
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 <!--Glide js-->
 <script src="./assets/plugins/glide/glide.min.js"></script>
 <!--Custom js-->
