blog detail page completed

--- a/certificates.html
+++ b/certificates.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="./assets/plugins/glide/glide.core.min.css">
     <link rel="stylesheet" href="./assets/plugins/glide/glide.theme.min.css">
     <!-- Fancybox -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
     <!-- Material design icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.4.47/css/materialdesignicons.min.css">
     <!-- Custom css -->
@@ -162,7 +161,7 @@
     <!-- Breadcrumb start -->
     <div class="py-9">
         <div class="container">
-            <h3 class="text-2xl text-[#303030]">
+            <h3 class="text-2xl text-[#303030] font-medium">
                 Sertifikatlar
             </h3>
             <ul class="breadcrumb">
