--- a/blog.html
+++ b/blog.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="./assets/plugins/glide/glide.theme.min.css">
     <!-- Material design icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.4.47/css/materialdesignicons.min.css">
+    <!-- Fancybox -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
     <!-- Custom css -->
     <link rel="stylesheet" href="assets/css/output.css">
 </head>
@@ -159,7 +161,7 @@
     <!-- Breadcrumb start -->
     <div class="py-9">
         <div class="container">
-            <h3 class="text-2xl text-[#303030]">Blog</h3>
+            <h3 class="text-2xl text-[#303030] font-medium">Blog</h3>
             <ul class="breadcrumb">
                 <li>
                     <a href="./index.html">
@@ -170,12 +172,75 @@
                     <span class="mdi mdi-chevron-right text-lg"></span>
                 </li>
                 <li>
-                    Blog
+                    <a href="./blogs.html">
+                        Bloglar
+                    </a>
+                </li>
+                <li>
+                    <span class="mdi mdi-chevron-right text-lg"></span>
+                </li>
+                <li>
+                    Blog nömrə 1
                 </li>
             </ul>
         </div>
     </div>
     <!-- Breadcrumb end -->
+
+    <section class="pb-8">
+        <div class="container">
+            <div class="row">
+                <div class="w-full lg:w-1/3">
+                    <div class="max-h-[500px]">
+                        <img src="./assets/images/blogs/blog_detail.png" class="w-full h-full" alt="">
+                    </div>
+                </div>
+                <div class="w-full lg:w-2/3">
+                    <h4 class="text-2xl font-semibold">
+                        Lorem Ipsum is simply dummy text
+                    </h4>
+                    <div class="inner_text leading-8 tracking-[0.05px] py-3 border-b border-gray-300">
+                        <p>
+                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by
+                            injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem
+                            Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text.
+                            Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature
+                            from
+                            45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked
+                            up
+                            one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in
+                            classical literature, discovered the undoubtable source.
+                        </p>
+                    </div>
+                    <div class="flex flex-wrap items-center justify-between">
+                        <span class="blog_date pt-3">
+                            01 NOYABR 2024
+                        </span>
+                        <ul class="flex items-center pt-3 gap-3">
+                            <li class="text-gray-300 font-medium text-sm">
+                                Paylaş:
+                            </li>
+                            <li class="b_social">
+                                <a href="">
+                                    <span class="mdi mdi-facebook"></span>
+                                </a>
+                            </li>
+                            <li class="b_social">
+                                <a href="">
+                                    <span class="mdi mdi-twitter"></span>
+                                </a>
+                            </li>
+                            <li class="b_social">
+                                <a href="">
+                                    <span class="mdi mdi-whatsapp"></span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 <!-- Footer start -->
 <footer>
@@ -288,6 +353,8 @@
 <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 <!--Glide js-->
 <script src="./assets/plugins/glide/glide.min.js"></script>
+<!-- Fancybox -->
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 <!--Custom js-->
 <script src="./assets/js/slides.js"></script>
 <script src="./assets/js/main.js"></script>
