--- a/blogs.html
+++ b/blogs.html
@@ -12,6 +12,8 @@
     <!-- Glide js -->
     <link rel="stylesheet" href="./assets/plugins/glide/glide.core.min.css">
     <link rel="stylesheet" href="./assets/plugins/glide/glide.theme.min.css">
+    <!-- Fancybox -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
     <!-- Material design icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.4.47/css/materialdesignicons.min.css">
     <!-- Custom css -->
@@ -159,7 +161,7 @@
     <!-- Breadcrumb start -->
     <div class="py-9">
         <div class="container">
-            <h3 class="text-2xl text-[#303030]">
+            <h3 class="text-2xl text-[#303030] font-medium">
                 Bloqlar
             </h3>
             <ul class="breadcrumb">
@@ -457,6 +459,8 @@
 
 <!--Alpine js-->
 <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+<!-- Fancybox -->
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 <!--Glide js-->
 <script src="./assets/plugins/glide/glide.min.js"></script>
 <!--Custom js-->
