--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Glide js -->
     <link rel="stylesheet" href="./assets/plugins/glide/glide.core.min.css">
     <link rel="stylesheet" href="./assets/plugins/glide/glide.theme.min.css">
+    <!-- Fancybox -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
     <!-- Material design icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.4.47/css/materialdesignicons.min.css">
     <!-- Custom css -->
@@ -609,6 +611,8 @@
 <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
 <!--Glide js-->
 <script src="./assets/plugins/glide/glide.min.js"></script>
+<!-- Fancybox -->
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 <!--Custom js-->
 <script src="./assets/js/slides.js"></script>
 <script src="./assets/js/main.js"></script>
