--- a/products.html
+++ b/products.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="./assets/plugins/glide/glide.theme.min.css">
     <!-- Material design icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/7.4.47/css/materialdesignicons.min.css">
+    <!-- Fancybox -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
     <!-- Custom css -->
     <link rel="stylesheet" href="assets/css/output.css">
 </head>
@@ -159,7 +161,7 @@
     <!-- Breadcrumb start -->
     <div class="py-9">
         <div class="container">
-            <h3 class="text-2xl text-[#303030]">Məhsullar</h3>
+            <h3 class="text-2xl text-[#303030] font-medium">Məhsullar</h3>
             <ul class="breadcrumb">
                 <li>
                     <a href="./index.html">
@@ -485,6 +487,8 @@
 
 <!--Alpine js-->
 <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+<!-- Fancybox -->
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 <!--Glide js-->
 <script src="./assets/plugins/glide/glide.min.js"></script>
 <!--Custom js-->
